--- a/index.html
+++ b/index.html
@@ -33,5 +33,10 @@
         </div>
       </div>
     </div>
+	<img class="corner-image" id="top-left" style="transform: rotate(45deg) rotate(-80deg); width: 120px; height: 120px;" src="stickers.png" alt="Image 1">
+	<img class="corner-image" id="top-right" style="transform: rotate(45deg) rotate(15deg);" src="hearts.png" alt="Image 2">
+	<img class="corner-image" id="bottom-left" style="transform: rotate(45deg) rotate(1deg); width: 300px; height: 300px;" src="cs2.png" alt="Image 3">
+	<img class="corner-image" id="bottom-right" style="transform: rotate(45deg) rotate(-48deg); width: 300px; height: 200px;" src="it2.png" alt="Image 4">
+	
   </body>
 </html>
